--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sasc"]
 	path = phylo/sasc/sasc
 	url = https://github.com/sciccolella/sasc.git
+[submodule "plastic/sasc/sasc"]
+	path = plastic/sasc/sasc
+	url = https://github.com/sciccolella/sasc
