--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sasc"]
-	path = plastic/phylogeny/sasc
+	path = plastic/phylogeny/sasc/sasc
 	url = https://github.com/sciccolella/sasc.git
